--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
 <body>
 
+<div id="fb-root"></div>
+
 <script>
     window.fbAsyncInit = function() {
         FB.init({
@@ -26,10 +28,12 @@
         var js, fjs = d.getElementsByTagName(s)[0];
         if (d.getElementById(id)) {return;}
         js = d.createElement(s); js.id = id;
-        js.src = "//connect.facebook.net/en_US/sdk.js";
+        js.src = "//connect.facebook.net/pt_BR/sdk.js";
         fjs.parentNode.insertBefore(js, fjs);
     }(document, 'script', 'facebook-jssdk'));
 </script>
+
+<div class="fb-login-button" data-max-rows="2" data-size="xlarge" data-show-faces="false" data-auto-logout-link="true"></div>
 
 </body>
 
