--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <div id="fb-root"></div>
 
-<div class="fb-login-button" data-max-rows="2" data-size="xlarge" data-show-faces="false" data-auto-logout-link="true"></div>
+<!--<div class="fb-login-button" data-max-rows="2" data-size="xlarge" data-show-faces="false" data-auto-logout-link="true"></div>-->
 
 </body>
 
