--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <!--<div onclick="LoginFacebook()" class="fb-login-button" data-max-rows="2" data-size="xlarge" data-show-faces="false" data-auto-logout-link="true"></div>-->
 
-<input type="button" value="Login" onclick="LoginFacebook()"/>
+<!--<input type="button" value="Login" onclick="LoginFacebook()"/>-->
 
 </body>
 
