--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 
 <div id="fb-root"></div>
 
-<div onclick="LoginFacebook()" class="fb-login-button" data-max-rows="2" data-size="xlarge" data-show-faces="false" data-auto-logout-link="true"></div>
+<!--<div onclick="LoginFacebook()" class="fb-login-button" data-max-rows="2" data-size="xlarge" data-show-faces="false" data-auto-logout-link="true"></div>-->
 
-<!--<input type="button" value="Login" onclick="LoginFacebook()"/>-->
+<input type="button" value="Autenticar" onclick="LoginFacebook()"/>
 
 </body>
 
