--- a/index.html
+++ b/index.html
@@ -17,7 +17,19 @@
 <div id="fb-root"></div>
 
 <!--<div onclick="LoginFacebook()" class="fb-login-button" data-max-rows="2" data-size="xlarge" data-show-faces="false" data-auto-logout-link="true"></div>-->
+<div>
 
+    <div>
+        <label>username:</label>
+        <input id="usernameTxt" value="" type="text" />
+    </div>
+    <div>
+        <label>password:</label>
+        <input id="passwordTxt" value="" type="text" />
+    </div>
+
+
+</div>
 <input type="button" value="Autenticar" onclick="LoginFacebook()"/>
 
 </body>
