--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
 
 
 </div>
-<input type="button" value="Autenticar" onclick="LoginFacebook()"/>
+<input type="button" value="Login" onclick="LoginParse()"/>
+<input type="button" value="Logout" onclick="LogoutParse()"/>
 
 </body>
 
