--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
 <div>
 
     <div>
-        <label>username:</label>
-        <input id="usernameTxt" value="" type="text" />
+        <input type="button" value="Log In" onclick="LoginSimpleParse()"/>
     </div>
     <div>
-        <label>password:</label>
-        <input id="passwordTxt" value="" type="text" />
+        <input type="button" value="Sign In Facebook" onclick="LoginFacebookParse()"/>
+    </div>
+    <div>
+        <input type="button" value="Logout" onclick="LogoutParse()"/>
     </div>
 
-
 </div>
-<input type="button" value="Login" onclick="LoginParse()"/>
-<input type="button" value="Logout" onclick="LogoutParse()"/>
+
+
 
 </body>
 
