--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
 
 </div>
 
+<div>
+    <input type="button" value="Gerar Roles" onclick="adicionarRole()"/>
+    <input type="button" value="Link User/Roles" onclick="adicionarUserInRoles()"/>
+</div>
 
 
 </body>
