--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </div>
 
 <div>
-    <input type="button" value="Gerar Roles" onclick="adicionarRole()"/>
+    <!--<input type="button" value="Gerar Roles" onclick="adicionarRole()"/>-->
     <input type="button" value="Link User/Roles" onclick="adicionarUserInRoles()"/>
 </div>
 
