--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 <div>
     <input type="button" value="Gerar Roles" onclick="adicionarRole()"/>
-    <input type="button" value="Link User/Roles" onclick="adicionarUserInRoles()"/>
+    <input type="button" value="Link User/Roles" onclick="adicionarUserInRoles2()"/>
 </div>
 
 
