--- a/index.html
+++ b/index.html
@@ -45,16 +45,17 @@
     </div>
     <br>
     <div>
-        <input type="button" value="Salvar" onclick="salvarDado()"/>
+        <input type="button" value="Salvar" onclick="createGames()"/>
+        <input type="button" value="Salvar" onclick="readGames()"/>
         <input type="button" value="Logout" onclick="LogoutParse()"/>
     </div>
 
 </div>
 
-<div>
-    <input type="button" value="Gerar Roles" onclick="adicionarRole()"/>
-    <input type="button" value="Link User/Roles" onclick="adicionarUserInRoles()"/>
-</div>
+<!--<div>-->
+    <!--<input type="button" value="Gerar Roles" onclick="adicionarRole()"/>-->
+    <!--<input type="button" value="Link User/Roles" onclick="adicionarUserInRoles()"/>-->
+<!--</div>-->
 
 
 </body>
