--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <br>
     <div>
         <input type="button" value="Salvar" onclick="createGames()"/>
-        <input type="button" value="Salvar" onclick="readGames()"/>
+        <input type="button" value="Retornar" onclick="readGames()"/>
         <input type="button" value="Logout" onclick="LogoutParse()"/>
     </div>
 
