--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
     <script type="text/javascript" src="http://www.parsecdn.com/js/parse-1.3.0.min.js"></script>
     <script type="text/javascript" src="../js/init.js"></script>
+    //CONTRACTS
+    <script type="text/javascript" src="../js/contract/games_contract.js"></script>
 </head>
 
 <body>
