--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
         <input type="button" value="Retornar" onclick="readGames()"/>
         <input type="button" value="Logout" onclick="LogoutParse()"/>
     </div>
+    <br>
+    <br>
+    <div id="tableGames"><tr><td><strong>Nome</strong></td><td><strong>Valor</strong></td><td><strong>Faixa Etária</strong></td></tr></div>
+
 
 </div>
 
