--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </div>
     <br>
     <br>
-    <div><table id="tableGames" style="border: 1px;"><tr><td><strong>Nome</strong></td><td><strong>Valor</strong></td><td><strong>Faixa Etária</strong></td></tr></table></div>
+    <div><table id="tableGames" style="border: 1px solid #000;"><tr><td><strong>Nome</strong></td><td><strong>Valor</strong></td><td><strong>Faixa Etária</strong></td></tr></table></div>
 
 
 </div>
