--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </div>
     <br>
     <br>
-    <div><table id="tableGames" style="border: 1px solid #000;"><tr><td style="border: 1px solid #000;"><strong>Nome</strong></td><td style="border: 1px solid #000;"><strong>Valor</strong></td><td style="border: 1px solid #000;"><strong>Faixa Etária</strong></td></tr></table></div>
+    <div id="collectionGames"></div>
 
 
 </div>
