--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <br>
     <div>
         <input type="button" value="Salvar" onclick="createGames()"/>
-        <input type="button" value="Salvar" onclick="updateGames()"/>
+        <input type="button" value="Editar" onclick="updateGames()"/>
         <input type="button" value="Retornar" onclick="readGames()"/>
         <input type="button" value="Logout" onclick="LogoutParse()"/>
     </div>
