--- a/index.html
+++ b/index.html
@@ -46,9 +46,10 @@
     </div>
     <br>
     <div>
-        <input type="button" value="Salvar" onclick="createGames()"/>
-        <input type="button" value="Editar" onclick="updateGames()"/>
-        <input type="button" value="Retornar" onclick="readGames()"/>
+        <input type="button" value="Create" onclick="createGames()"/>
+        <input type="button" value="Read" onclick="readGames()"/>
+        <input type="button" value="Update" onclick="updateGames()"/>
+        <input type="button" value="Delete" onclick="deleteGames()"/>
         <input type="button" value="Logout" onclick="LogoutParse()"/>
     </div>
     <br>
