--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
         <input type="button" value="Delete" onclick="deleteGames()"/>
         <input type="button" value="Logout" onclick="LogoutParse()"/>
     </div>
+    <div>
+        <input type="button" value="Teste Cloud Code" onclick="getFirstCloudCode()"/>
+    </div>
     <br>
     <br>
     <div id="collectionGames"></div>
