--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
         <input type="button" value="Logout" onclick="LogoutParse()"/>
     </div>
     <div>
-        <input type="button" value="Teste Cloud Code" onclick="getFirstCloudCode()"/>
+        <input type="button" value="Read" onclick="readGames()"/>
+        <input type="button" value="CloudCode" onclick="getFirstCloudCode()"/>
     </div>
     <br>
     <br>
