--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 </div>
 
-<div id="cadastro" style="display:none;">
+<div id="cadastro" style="display:block;">
     <br>
     <br>
     <div>
@@ -52,15 +52,13 @@
         <input type="button" value="Delete" onclick="deleteGames()"/>
         <input type="button" value="Logout" onclick="LogoutParse()"/>
     </div>
+    <div>
+        <input type="button" value="CloudCode" onclick="getFirstCloudCode()"/>
+    </div>
     <br>
     <br>
     <div id="collectionGames"></div>
 
-</div>
-
-<div>
-    <input type="button" value="Read" onclick="readGames()"/>
-    <input type="button" value="CloudCode" onclick="getFirstCloudCode()"/>
 </div>
 
 <!--<div>-->
